// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comparing basic types 1`] = `
"
    left-type:
      boolean
    right-type:
      boolean
    output:
      []"
`;

exports[`comparing basic types 2`] = `
"
    left-type:
      string
    right-type:
      string
    output:
      []"
`;

exports[`comparing basic types 3`] = `
"
    left-type:
      number
    right-type:
      number
    output:
      []"
`;

exports[`comparing basic types 4`] = `
"
    left-type:
      void
    right-type:
      void
    output:
      []"
`;

exports[`comparing basic types 5`] = `
"
    left-type:
      boolean
    right-type:
      number
    output:
      [
	\\"Error: NumberTypeAnnotation cannot be assigned to BooleanTypeAnnotation\\"
]"
`;

exports[`comparing basic types 6`] = `
"
    left-type:
      'a'
    right-type:
      'a'
    output:
      []"
`;

exports[`comparing basic types 7`] = `
"
    left-type:
      'a'
    right-type:
      'b'
    output:
      [
	\\"Error: StringLiteralTypeAnnotation cannot be assigned to StringLiteralTypeAnnotation\\"
]"
`;

exports[`comparing basic types 8`] = `
"
    left-type:
      8
    right-type:
      8
    output:
      []"
`;

exports[`comparing basic types 9`] = `
"
    left-type:
      2
    right-type:
      8
    output:
      [
	\\"Error: NumberLiteralTypeAnnotation cannot be assigned to NumberLiteralTypeAnnotation\\"
]"
`;

exports[`comparing basic types 10`] = `
"
    left-type:
      2
    right-type:
      number
    output:
      [
	\\"Error: NumberTypeAnnotation cannot be assigned to NumberLiteralTypeAnnotation\\"
]"
`;

exports[`comparing basic types 11`] = `
"
    left-type:
      number
    right-type:
      2
    output:
      []"
`;

exports[`comparing basic types 12`] = `
"
    left-type:
      string
    right-type:
      'a'
    output:
      []"
`;

exports[`comparing basic types 13`] = `
"
    left-type:
      'a'
    right-type:
      string
    output:
      [
	\\"Error: StringTypeAnnotation cannot be assigned to StringLiteralTypeAnnotation\\"
]"
`;

exports[`comparing basic types 14`] = `
"
    left-type:
      true
    right-type:
      true
    output:
      []"
`;

exports[`comparing basic types 15`] = `
"
    left-type:
      true
    right-type:
      false
    output:
      [
	\\"Error: BooleanLiteralTypeAnnotation cannot be assigned to BooleanLiteralTypeAnnotation\\"
]"
`;
